# ci-example-docker

./: .gitignore  CMakeLists.txt  MyPkgConfig.cmake.in  readme.md
.github/workflows/: build-env.yaml  ci.yaml
apps/: CMakeLists.txt  main.cpp
ci/docker/: build-env.Dockerfile
ci/repo/: repo.yaml
include/mypkg/: mypkg.hpp
src/: CMakeLists.txt  compute_something_with_mpi.cpp  cuda_utils.hpp  multiply_by_two.cpp
test/: CMakeLists.txt  tests_mpi.cpp  tests_unit.cpp
tools/docker/: build-env.Dockerfile
tools/environments/ci/: spack.yaml
